# final-project-nooneknows

./: README.md  environment.yml  project structure.drawio  pyproject.toml
examples/: main.py
inputs/: project_structure.drawio
src/: load_files.py  postprocessing.py  solve_bem.py  utils.py
src/WT/: __init__.py  load_files.py  solve_bem.py
src/wt/: __init__.py  load_files.py  postprocessing.py  solve_bem.py
tests/: test_load_file.py  test_plots.py  test_solve_bem  test_solve_bem.py
