[tool.poetry]
name = "Wind_turbine_modeling"
version = "0.1.0"
description = "With the use of BEM (Blade Element Momentum) a wind turbine is going to be modelled and tested"
authors = [
    { name = "Arianna", email = "s23121@dtu.dk" },
    { name = "Giovanni", email = "s240109@dtu.dk" },
    { name = "Beatrice", email = "s232961@dtu.dk" }
]
license = "DTU"
readme = "README.md"
repository = "https://github.com/DTUWindEducation/final-project-nooneknows.git"
documentation = "https://github.com/DTUWindEducation/46120-PiWE/blob/main/week08_final_project_intro/wind_turbine_modeling/README.md"

dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]