[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "wt"
description = " Develop a steady-state Blade Element Momentum (BEM) model to predict the aerodynamic performance of a wind turbine"

version = "0.0.1"
authors = [
    { name = "Arianna", email = "s23121@dtu.dk" },
    { name = "Giovanni", email = "s240109@dtu.dk" },
    { name = "Beatrice", email = "s232961@dtu.dk" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[project.urls]
repository = "https://github.com/DTUWindEducation/final-project-nooneknows.git"
